# SqliteFileExchange

./: .gitignore  CMakeLists.txt
include/: FileDataManager.hpp  StorageManager.hpp
src/: main.cpp
